# computer-pilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  marketplace.json
.claude-plugin/: marketplace.json
docs/: README.md  ROADMAP.md  competitive-analysis.md  implementation-plan.md  research.md
docs/archive/: README.md  cross-platform-strategy.md  deep-research.md  implementation-principles.md  macos-control-bible.md  market-landscape-2026.md
plugin/: README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: desktop.md
scripts/: build.sh  release.sh
src/: ax.rs  diff.rs  display.rs  error.rs  key.rs  main.rs  mouse.rs  observer.rs  ocr.rs  sck.rs  screenshot.rs  sdef.rs  system.rs  wait.rs
test-results/: macosworld-1775201667.json  macosworld-1775201996.json  macosworld-1775202017.json  macosworld-1775202071.json  macosworld-1775202214.json  macosworld-1775202229.json  macosworld-1775202269.json  macosworld-1775202498.json  macosworld-1775204603.json
tests/: compare_scripting.sh  run.sh
tests/agent/: README.md  caliper_report.py  run.py
tests/commands/: helpers.sh  run_all.sh  test_annotated.sh  test_apps.sh  test_ax_path.sh  test_capture_protection.sh  test_click.sh  test_defaults.sh  test_displays.sh  test_drag.sh  test_errors.sh  test_examples.sh  test_find.sh  test_help.sh  test_hover.sh  test_key.sh  test_label_fallback.sh  test_launch.sh  test_menu.sh  test_method_meta.sh  test_nearest.sh  test_observe_region.sh  test_ocr.sh  test_ocr_confidence.sh  test_output.sh  test_paste_auto.sh  test_perform.sh  (+24 more)
(+12 files in other folders)
