[package]
name = "cu"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "cu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["alloc", "NSArray", "NSDictionary", "NSString", "NSError"] }
objc2-vision = { version = "0.3", features = ["alloc", "objc2-core-graphics", "VNRecognizeTextRequest", "VNRequestHandler", "VNRequest", "VNObservation"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage"] }
quick-xml = "0.37"
